--- a/CSS/certificates/certificates.css
+++ b/CSS/certificates/certificates.css
@@ -45,13 +45,14 @@
 
 .certificateContainer img {
   width: 97%;
-  height: 315px;
+  /* height: 315px; */
 
 }
 
+
+
 .certificateContainer .domainContainer {
   position: relative;
-  padding: 10px;
   width: 90%;
   gap: 20px;
   display: flex;
@@ -69,7 +70,6 @@
 }
 
 .certificateContainer .domainContent {
-  padding: 10px;
   gap: 20px;
   display: flex;
   justify-content: space-evenly;
