--- a/CSS/projects/projects.css
+++ b/CSS/projects/projects.css
@@ -18,8 +18,6 @@ body {
 
     background-position: center;
 
-
-
 }
 
 .mainSection {
@@ -153,6 +151,7 @@ body {
     padding: 7px;
     text-align: center;
     border-radius: 0px 0px 12px 12px;
+    transition: 0.4s;
 
 }
 
@@ -170,13 +169,13 @@ body {
     font-size: 1.2em;
     text-transform: capitalize;
     text-wrap: nowrap;
-    transition: 0.4s;
+    
 }
 
 
 .CppContainerProjects .card h3 span,
-.ProjectResource:not(.progressProject .ProjectResource) a:hover {
-    color: #088376;
+.ProjectResource:not(.progressProject .ProjectResource):hover {
+ background-color: #088376;
 }
 
 .card {
@@ -205,6 +204,3 @@ body {
 }
 
 /* end */
-#DropDown {
-    top: 20px;
-}
